--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "react": "^17.0.1",
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^17.0.1",
